flex/flex-tests/testData/js2_highlighting/ChangeReturnTypeFix2.js2
package {
public class ChangeReturnTypeFix2 extends Foo123 {
  override public function foo():int {
    return <error descr="Returned expression type String is not assignable to type int">"abc"</error>;
  }
}
}

<error descr="Package should be first statement in file">package</error> {
public class <error descr="Class 'Foo123' should be defined in file 'Foo123.js2'">Foo123</error> {
  public function foo():int {
    return 0;
  }
}
}